fixing alignment

--- a/client/src/pages/JoinRoom/_joinroom.scss
+++ b/client/src/pages/JoinRoom/_joinroom.scss
@@ -21,8 +21,7 @@
 }
 
 #duck {
-  margin-top: 200px
-  margin
+  margin-top: 200px;
 }
 
 .ready-button:hover {
